--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             <h1 style="color: lightgreen; background-color: white; font-family: cursive; font-style: italic; padding: 20px; margin-bottom: 30px;">Profeel</h1>
         </div>
         <div style="float: left; padding: 20px; font-size: 20px; font-family: sans-serif; text-decoration: none;">
-                    <a style="text-decoration: none; background-color: green; color: white; padding: 20px 30px 20px 30px;" href="home.html">Home</a>
+                    <a style="text-decoration: none; background-color: green; color: white; padding: 20px 30px 20px 30px;" href="index.html">Home</a>
                     <a style="text-decoration: none; background-color: white; color: lightgreen; padding: 20px 30px 20px 30px;" href="pictures.html">Pictures</a>
         </div>
         <br>
