--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <br>
         <br>
         <br>
-        <img style="float: right; height:500px; width: 500px; margin-right: 150px; border-radius: 1000px;" src="C:\Users\Admin\Dropbox\Min PC (LAPTOP-61FS5KR2)\Desktop\AIK-Retro.jpeg">
+        <img style="float: right; height:500px; width: 500px; margin-right: 150px; border-radius: 1000px;" src="AIK-Retro.jpeg">
         <br>
         <br>
         <br>
