--- a/pictures.html
+++ b/pictures.html
@@ -15,23 +15,23 @@
         <br>
         <br>
         <div style="font-family: sans-serif; color: green; font-style: italic">
-                    <img style="height: 100px; width: 100px;" src="C:\Users\Admin\Dropbox\Min PC (LAPTOP-61FS5KR2)\Desktop\AIK.jpeg">
+                    <img style="height: 100px; width: 100px;" src="AIK.jpeg">
                     <p>AIK: Störst, Bäst och Vackrast</p>
                     <p>30kr</p>
                     <button id="buy" type="submit">Buy</button>
                     <br>
                     <br>
-                    <img style="height: 100px; width: 100px;" src="C:\Users\Admin\Dropbox\Min PC (LAPTOP-61FS5KR2)\Desktop\AIK-Retro.jpeg">
+                    <img style="height: 100px; width: 100px;" src="AIK-Retro.jpeg">
                     <p>AIK: Retro</p>
                     <p>30kr</p>
                     <br>
                     <br>
-                    <img style="height: 100px; width: 100px;" src="C:\Users\Admin\Dropbox\Min PC (LAPTOP-61FS5KR2)\Desktop\AIK-Derbydrommar.jpeg">
+                    <img style="height: 100px; width: 100px;" src="AIK-Derbydrommar.jpeg">
                     <p>AIK: Derbydrömmar</p>
                     <p>20kr</p>
                     <br>
                     <br>
-                    <img style="height: 100px; width: 100px;" src="C:\Users\Admin\Dropbox\Min PC (LAPTOP-61FS5KR2)\Desktop\GIF-Sundsvall.jpeg">
+                    <img style="height: 100px; width: 100px;" src="GIF-Sundsvall.jpeg">
                     <p>GIF Sundsvall: Norrlands Stolthet</p>
                     <p>30kr</p>
         </div>
