--- a/pictures.html
+++ b/pictures.html
@@ -15,7 +15,7 @@
         <br>
         <br>
         <div style="font-family: sans-serif; color: green; font-style: italic">
-                    <img style="height: 100px; width: 100px;" src="AIK.jpeg">
+                    <img style="height: 100px; width: 100px; border-radius: 25px" src="AIK.jpeg">
                     <p>AIK: Störst, Bäst och Vackrast</p>
                     <p>30kr</p>
                     <button style="text-decoration: none; background-color: green; color: white; padding: 20px 30px 20px 30px; border-radius: 50px;" id="buy" type="submit">Buy</button>
