--- a/pictures.html
+++ b/pictures.html
@@ -21,19 +21,19 @@
                     <button style="text-decoration: none; background-color: green; color: white; padding: 20px 30px 20px 30px; border-radius: 50px;" id="buy" type="submit">Buy</button>
                     <br>
                     <br>
-                    <img style="height: 100px; width: 100px;" src="AIK-Retro.jpeg">
+                    <img style="height: 100px; width: 100px; border-radius: 25px" src="AIK-Retro.jpeg">
                     <p>AIK: Retro</p>
                     <p>30kr</p>
                     <button style="text-decoration: none; background-color: green; color: white; padding: 20px 30px 20px 30px; border-radius: 50px;" id="buy" type="submit">Buy</button>
                     <br>
                     <br>
-                    <img style="height: 100px; width: 100px;" src="AIK-Derbydrommar.jpeg">
+                    <img style="height: 100px; width: 100px; border-radius: 25px" src="AIK-Derbydrommar.jpeg">
                     <p>AIK: Derbydrömmar</p>
                     <p>20kr</p>
                     <button style="text-decoration: none; background-color: green; color: white; padding: 20px 30px 20px 30px; border-radius: 50px;" id="buy" type="submit">Buy</button>
                     <br>
                     <br>
-                    <img style="height: 100px; width: 100px;" src="GIF-Sundsvall.jpeg">
+                    <img style="height: 100px; width: 100px; border-radius: 25px" src="GIF-Sundsvall.jpeg">
                     <p>GIF Sundsvall: Norrlands Stolthet</p>
                     <p>30kr</p>
             <button style="text-decoration: none; background-color: green; color: white; padding: 20px 30px 20px 30px; border-radius: 50px;" id="buy" type="submit">Buy</button>
